--- a/style.css
+++ b/style.css
@@ -5,3 +5,84 @@
 .item {
   cursor: pointer;
 }
+:root {
+  --border-color: rgb(110, 205, 240);
+  --component-background-color: rgb(226, 243, 253);
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+::-webkit-search-cancel-button {
+  cursor: pointer;
+}
+
+.search-input {
+  width: 100%;
+  padding-inline: 0.5rem;
+  border: none;
+  border-bottom: 1px solid var(--border-color);
+}
+
+.search-input:focus-visible {
+  outline: none;
+  border-bottom-width: 2px;
+  margin-bottom: -1px;
+}
+
+#results-list {
+  padding: 0.5rem 1rem;
+  margin: 0;
+  list-style: none;
+  background: var(--component-background-color);
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+}
+
+.item {
+  cursor: pointer;
+  padding-block: 0.25rem;
+}
+
+#datepicker-container {
+  display: flex;
+  justify-content: center;
+}
+
+#datepicker {
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  border: 1px solid var(--border-color);
+  display: flex;
+  flex-direction: row-reverse;
+  box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.25);
+  min-width: fit-content;
+}
+
+#datepicker:focus-visible {
+  outline: none;
+  border-width: 2px;
+  margin-top: -1px;
+}
+
+::-webkit-calendar-picker-indicator {
+  cursor: pointer;
+  /* background-color: var(--border-color);
+  border-radius: 50%;
+  padding: 0.5rem;
+  margin-bottom: 4px; */
+  /* background-image: url("https://fontawesome.com/icons/calendar?f=classic&s=regular&pc=%23ffffff"); */
+}
+
+::-webkit-datetime-edit {
+  cursor: text;
+  min-width: max-content;
+}
