--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@
 }
 
 body {
-  margin: 1rem;
+  padding: 1rem;
+  margin: 0;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -104,15 +105,11 @@ body {
   outline: none;
   border-width: 2px;
   margin-top: -1px;
+  margin-bottom: -1px;
 }
 
 ::-webkit-calendar-picker-indicator {
   cursor: pointer;
-  /* background-color: var(--border-color);
-  border-radius: 50%;
-  padding: 0.5rem;
-  margin-bottom: 4px; */
-  /* background-image: url("https://fontawesome.com/icons/calendar?f=classic&s=regular&pc=%23ffffff"); */
 }
 
 ::-webkit-datetime-edit {
@@ -125,4 +122,5 @@ body {
   font-size: 1.25rem;
   flex-direction: column;
   align-items: center;
+  text-align: center;
 }
