--- a/style.css
+++ b/style.css
@@ -8,43 +8,77 @@
 :root {
   --border-color: rgb(110, 205, 240);
   --component-background-color: rgb(226, 243, 253);
+  --input-width: 32rem;
+  --input-max-width: 100%;
+  --search-height: 1.5rem;
 }
 
 * {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   box-sizing: border-box;
 }
 
 body {
-  margin: 1rem;
+  padding: 1rem;
+  margin: 0;
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  background-color: #fffff5;
+  height: 100vh;
 }
 
 ::-webkit-search-cancel-button {
   cursor: pointer;
 }
 
-.search-input {
-  width: 100%;
-  padding-inline: 0.5rem;
-  border: none;
-  border-bottom: 1px solid var(--border-color);
+#search-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
 }
 
-.search-input:focus-visible {
-  outline: none;
+#input-wrapper {
+  border-bottom: 1px solid var(--border-color);
+  display: flex;
+  max-width: var(--input-max-width);
+  width: var(--input-width);
+  padding-bottom: 0.25rem;
+  gap: 0.5rem;
+  height: var(--search-height);
+}
+
+#input-wrapper:focus-within {
+  margin-bottom: -0.5px;
   border-bottom-width: 2px;
+}
+
+#search-destination {
+  width: 100%;
+  border: none;
+  background: transparent;
+}
+
+#input-wrapper:focus-within #search-destination {
   margin-bottom: -1px;
+}
+
+#search-destination:focus-visible {
+  outline: none;
 }
 
 #results-list {
   padding: 0.5rem 1rem;
   margin: 0;
+  width: var(--input-width);
+  max-width: var(--input-max-width);
   list-style: none;
   background: var(--component-background-color);
   border-bottom-left-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
+  position: absolute;
+  top: var(--search-height);
 }
 
 .item {
@@ -71,18 +105,22 @@ body {
   outline: none;
   border-width: 2px;
   margin-top: -1px;
+  margin-bottom: -1px;
 }
 
 ::-webkit-calendar-picker-indicator {
   cursor: pointer;
-  /* background-color: var(--border-color);
-  border-radius: 50%;
-  padding: 0.5rem;
-  margin-bottom: 4px; */
-  /* background-image: url("https://fontawesome.com/icons/calendar?f=classic&s=regular&pc=%23ffffff"); */
 }
 
 ::-webkit-datetime-edit {
   cursor: text;
   min-width: max-content;
+}
+
+#booked-trip {
+  margin: 0;
+  font-size: 1.25rem;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
